creating obstacles is in progress

--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
   <body>
     <link rel="stylesheet" href="/build/bundle.css" />
     <script defer src="/build/bundle.js"></script>
+    <link rel="stylesheet" href="https://kit.fontawesome.com/26b3d632d0.css" crossorigin="anonymous" />
   </body>
 </html>
