--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Svelte app</title>
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
   </head>
 
   <body>
