--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Svelte app</title>
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
   </head>
 
   <body>
-    <link rel="stylesheet" href="/build/bundle.css" />
-    <script defer src="/build/bundle.js"></script>
+    <link rel="stylesheet" href="build/bundle.css" />
+    <script defer src="build/bundle.js"></script>
     <link rel="stylesheet" href="https://kit.fontawesome.com/26b3d632d0.css" crossorigin="anonymous" />
   </body>
 </html>
